...
            color: AppColors.entryTextColor,
            fontFamily: 'Oswald',
          ),
        ),
        actions: <Widget>[
          TextButton(
            key: const Key('tag_save'),
            onPressed: () async {
              _formKey.currentState!.save();
              if (_formKey.currentState!.validate()) {
                final formData = _formKey.currentState?.value;
                TagEntity tagEntity = widget.tagEntity.copyWith(
                  tag: '${formData!['tag']}'.trim(),
...
                      child: Column(
                        children: <Widget>[
                          FormTextField(
                            initialValue: widget.tagEntity.tag,
                            labelText: 'Tag',
                            name: 'tag',
                            key: const Key('tag_name_field'),
                          ),
                          FormBuilderSwitch(
                            name: 'private',
                            initialValue: widget.tagEntity.private,
                            title: Text(
                              'Private: ',
...
