...
  "outboxMonitorLabelPending": "pending",
  "outboxMonitorLabelSent": "sent",
  "outboxMonitorNoAttachment": "no attachment",
  "outboxMonitorRetries": "retries",
  "settingsAdvancedTitle": "Advanced Settings",
  "settingsConflictsTitle": "Sync Conflicts",
  "settingsDashboardsSearchHint": "Search...",
  "settingsDashboardsTitle": "Dashboards",
  "settingsFlagsTitle": "Flags",
  "settingsHealthImportTitle": "Health Import",
  "settingsLogsTitle": "Logs",
  "settingsMaintenanceTitle": "Maintenance",
  "settingsMeasurableAggregationLabel": "Aggregation Type:",
...
